[ca] Wrong (out of context) translation corrected. Also corrected in the Transifex page.

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
@@ -215,7 +215,7 @@ space_after_comma = Poseu un espai despr\u00e9s de la coma, per\u00f2 no abans d
 
 spelling = S'ha trobat un possible error ortogr\u00e0fic
 
-startChecking = La comprovaci\u00f3 comen\u00e7ar\u00e0 d'ac\u00ed a {0}
+startChecking = Comen\u00e7a la verificaci\u00f3 en {0}
 
 sv = suec
 
