[de] no spell check suggestions for performance reasons

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -7,7 +7,11 @@ LanguageTool Change Log
 
  -German:
    -many new rules and rule updates
-   -added spelling check dictionary for the standalone version
+   -added spellcheck dictionary for the standalone version; the dictionary used is the
+    one by Franz Michael Baumann,
+    see http://extensions.libreoffice.org/extension-center/german-de-de-frami-dictionaries
+    LanguageTool can now detect spelling errors, but it does not offer suggestions
+    for performance reasons (German only)
    -added variants for Austria, Germany, and Switzerland
    -added several thousand words to the internal dictionary for better
     error detection and less false alarms
@@ -25,7 +29,7 @@ LanguageTool Change Log
    -major update, including many new rules and new tokenization (Jaume Ortolà i Font)
    -new synthesizer (given a part-of-speech, this generates the inflected word
    forms) (Jaume Ortolà i Font)
-   -added spelling check dictionary for the standalone version
+   -added spellcheck dictionary for the standalone version
 
  -Russian:
    -fixed a few false alarms
@@ -36,22 +40,22 @@ LanguageTool Change Log
 
  -Italian:
    -several new rules (Riccardo Murri and Agnese Dal Borgo)
-   -added spelling check dictionary for the standalone version
+   -added spellcheck dictionary for the standalone version
 
  -French:
    -updated dictionary to use Dicollecte-4.5
    -several new rules and fixed false alarms
-   -added spelling check dictionary for the standalone version
+   -added spellcheck dictionary for the standalone version
 
  -Breton
    -updated dictionary to use Apertium svn r38896.
    -several new rules and fixed false alarms
    -added some references to the Breton grammar:
     "La grammaire bretonne pour tous (Eugène CHALM)".
-   -added spelling check dictionary for the standalone version
+   -added spellcheck dictionary for the standalone version
 
  -Polish
-   -added spelling check dictionary for the standalone version
+   -added spellcheck dictionary for the standalone version
    -major update of the tagger dictionary
 
  -Portuguese
