adding information about jna and hunspell license

--- a/trunk/JLanguageTool/libs/README
+++ b/trunk/JLanguageTool/libs/README
@@ -16,3 +16,5 @@ morfologik-*.jar: Morfologik-license.txt, http://morfologik.blogspot.com, http:/
 segment-1.3.0.jar: segment-license.txt, http://sourceforge.net/projects/segment/
 tika-core-0.9.jar: Apache License 2.0, http://tika.apache.org
 xml-text-editor-0.0.3.jar: Apache License 2.0, http://code.google.com/p/xml-text-editor/
+jna.jar: LGPL version 2.1 or later, https://github.com/twall/jna
+native-lib/*hunspell*: GPL/LGPL/MPL triple license, http://hunspell.sourceforge.net/
