- update CHANGES.txt to indicate that spelling checker   is added for Esperanto (I changed my mind about it...)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -59,14 +59,15 @@ LanguageTool Change Log
    -major update of the tagger dictionary
 
  -Portuguese
-  -initial support by Marco A.G. Pinto
+   -initial support by Marco A.G. Pinto
 
  -Esperanto
    -several new rules and fixed false alarms
    -added <url> for further information about errors with links to
     PMEG (Plena Manlibro de Esperanto) with permission of its
-    author Bertilo Wennergren, and to Lernu.net also with
+    author Bertilo Wennergren, and to http://lernu.net also with
     permission of the lernu team.
+   -added spellcheck dictionary for the standalone version
 
 
  -LibreOffice / OpenOffice integration:
