[fr] changed Hunspell dictionary from      Dicollecte-4.5 "Moderne" to      Dicollecte-4.5 "Classique & réforme 1990".

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -46,6 +46,7 @@ LanguageTool Change Log
    -updated dictionary to use Dicollecte-4.5
    -several new rules and fixed false alarms
    -added spellcheck dictionary for the standalone version
+    using Dicollecte-4.5 «classique & réforme 1990».
 
  -Breton
    -updated dictionary to use Apertium svn r38896.
