--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -30,7 +30,7 @@ LanguageTool Change Log
    -new synthesizer (given a part-of-speech, this generates the inflected word
     forms) (Jaume Ortolà i Font)
    -added spellcheck dictionary for the standalone version
-    using Hunspell dictionary ca-valencia (avl) 2.3.0 by softcatala
+    using Hunspell dictionary ca-valencia (avl) 2.3.0 by Softcatalà
 
  -Russian:
    -fixed a few false alarms
