--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -58,6 +58,7 @@ LanguageTool Change Log
 
  -Polish
    -added spellcheck dictionary for the standalone version
+   -some new rules and fixed false alarms
    -major update of the tagger dictionary
 
  -Portuguese
@@ -121,7 +122,7 @@ LanguageTool Change Log
   to disable or enable rules in the same way as on the command-line.
 
  -The XML format for rules has been changed to use <marker>...</marker> tags instead
-  of mark_from and mark_to attributes
+  of mark_from and mark_to attributes.
 
  -Overlapping rule matches are filtered now so that only the first match per <rulegroup> is kept
 
