latest translations from transifex (Greek was still missing)

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
@@ -241,12 +241,12 @@ zh = Sinaeg
 
 moreInfo = Muioc\u2019h a ditouro\u00f9 \:
 
-# pt = Portuguese
+pt = Portugaleg
 
-# pt-BR = Portuguese (Brazil)
+pt-BR = Portugaleg (Brazil)
 
-# pt-PT = Portuguese (Portugal) 
+pt-PT = Portugaleg (Portugal)
 
-# guiWarning = Warning
+guiWarning = Diwallit
 
-# guiDuplicate = Duplicate rule file\!
+guiDuplicate = Restr reolenno\u00f9 eilet \!
