--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
@@ -117,7 +117,7 @@ guiCloseButton=Luk
 
 guiConfigWindowTitle = LanguageTool Indstillinger
 
-guiDemoText = Dette er et teksteksempel for at at vise hvordan LanguageTool virker. Bem\u00e6rk dog, at den ikke indeholder en stavekontrol.
+guiDemoText = Dette er et teksteksempel for at at vise hvordan LanguageTool virker.
 guiLanguageManagerDialog=Language Module Manager
 
 guiMatchCount = Mulig fejl\:
@@ -171,7 +171,7 @@ guiRunOnPort = K\u00f8r som service p\u00e5 po&rt
 
 guiSelectionCheckComplete = LanguageTools kontrol af markerede tekst er f\u00e6rdig.
 
-# guiTagText = &Tag Text
+guiTagText = Opm\u00e6rk &teksten 
 
 incorrect_case = Denne s\u00e6tning starter ikke med et stort begyndelsesbogstav
 
@@ -249,4 +249,4 @@ pt-PT = Portugisisk (Portugal)
 
 guiWarning = Advarsel
 
-# guiDuplicate = Duplicate rule file\!
+guiDuplicate = Dublet af regelfil\!
