--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_eo.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_eo.properties
@@ -241,12 +241,12 @@ zh = \u0108ina
 
 moreInfo = Pliaj informoj \:
 
-# pt = Portuguese
+pt = Portugala
 
-# pt-BR = Portuguese (Brazil)
+pt-BR = Portugala (Brazilo)
 
-# pt-PT = Portuguese (Portugal) 
+pt-PT = Portugala (Portugalio)
 
-# guiWarning = Warning
+guiWarning = Averto
 
-# guiDuplicate = Duplicate rule file\!
+guiDuplicate = Duobla dosiero de reguloj\!
