--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_fr.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_fr.properties
@@ -241,12 +241,12 @@ zh = Chinois
 
 moreInfo = Plus d\u2019informations \:
 
-# pt = Portuguese
+pt = Portuguais
 
-# pt-BR = Portuguese (Brazil)
+pt-BR = Portuguais (Br\u00e9sil)
 
-# pt-PT = Portuguese (Portugal) 
+pt-PT = Portuguais (Portugal)
 
-# guiWarning = Warning
+guiWarning = Avertissement
 
-# guiDuplicate = Duplicate rule file\!
+guiDuplicate = Fichier de r\u00e8gles dupliqu\u00e9
