--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_it.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_it.properties
@@ -33,11 +33,11 @@ da = Danese
 
 de = Tedesco
 
-# de-DE = German (Germany)
+de-DE = Tedesco (Germania)
 
-# de-AT = German (Austrian)
+de-AT = Tedesco (Austriaco)
 
-# de-CH = German (Swiss)
+de-CH = Tedesco (Svizzero)
 
 desc_comma_whitespace = Utilizzo dello spazio prima della virgola e prima/dopo le parentesi
 
@@ -61,29 +61,29 @@ desc_uppercase_sentence = Controlla che la frase inizi con una maiuscola
 
 desc_whitespacerepetition = Ripetizione dello spazio (brutta formattazione)
 
-# desc_spelling = Possible spelling mistake
+desc_spelling = Probabile errore di battitura
 
-# desc_spelling_short = Spelling mistake
+desc_spelling_short = Errore di battitura
 
 double_dots_short = Due punti consecutivi
 
 double_commas_short = Due virgole consecutive
 
-# el = Greek
+el = Greo
 
 en = Inglese
 
-# en-AU = English (Australian)
+en-AU = Inglese (Australiano)
 
-# en-GB = English (British)
+en-GB = Inglese (Britannico)
 
-# en-US = English (American)
+en-US = Inglese (Americano)
 
-# en-CA = English (Canadian)
+en-CA = Inglese (Canadese)
 
-# en-NZ = English (New Zealand)
+en-NZ = Inglese (Nuova Zelanda)
 
-# en-ZA = English (South African)
+en-ZA = Inglese (Sud Africano)
 
 enterText = Si prega di scrivere o di incollare il testo da controllare nel campo in alto
 
@@ -213,7 +213,7 @@ sl = Sloveno
 
 space_after_comma = Inserire lo spazio dopo la virgola e non prima
 
-# spelling = Possible spelling mistake found
+spelling = Trovato un probabile errore di battitura
 
 startChecking = Inizio controllo a {0}
 
@@ -231,7 +231,7 @@ uk = Ucraino
 
 unpaired_brackets = Non chiusura di parentesi o di simboli simili
 
-# useGUIConfig = Use above settings for the server
+useGUIConfig = Usare queste impostazioni per il server
 
 whitespace_repetition = Probabile errore\: ripetizione di spazio
 
@@ -239,14 +239,14 @@ ro = Rumeno
 
 zh = Cinese
 
-# moreInfo = More info\:
+moreInfo = Ulteriori informazioni\:
 
-# pt = Portuguese
+pt = Portoghese
 
-# pt-BR = Portuguese (Brazil)
+pt-BR = Portoghese (Brasile)
 
-# pt-PT = Portuguese (Portugal) 
+pt-PT = Portoghese (Portogallo)
 
-# guiWarning = Warning
+guiWarning = Avvertenza
 
-# guiDuplicate = Duplicate rule file\!
+guiDuplicate = File di regole duplicato\!
