--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_km.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_km.properties
@@ -1,7 +1,7 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-# atd = Automatically detect language
+atd = \u1791\u1791\u17bc\u179b\u200b\u179f\u17d2\u1782\u17b6\u179b\u17cb\u200b\u1797\u17b6\u179f\u17b6\u200b\u178a\u17c4\u1799\u200b\u200b\u179f\u17d2\u179c\u17d0\u1799\u200b\u1794\u17d2\u179a\u179c\u178f\u17d2\u178f\u17b7
 
 # ast = Asturian
 
@@ -59,13 +59,13 @@ desc_unpaired_brackets = \u1798\u17b6\u1793\u200b\u179a\u17c9\u17b6\u178f\u17cb 
 
 # desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
 
-# desc_whitespacerepetition = Whitespace repetition (bad formatting)
+desc_whitespacerepetition = \u1798\u17b6\u1793\u200b\u178a\u1780\u1783\u17d2\u179b\u17b6\u200b\u179b\u17be\u179f\u200b\u1796\u17b8\u200b\u178f\u1798\u17d2\u179a\u17bc\u179c\u1780\u17b6\u179a
 
 # desc_spelling = Possible spelling mistake
 
 # desc_spelling_short = Spelling mistake
 
-# double_dots_short = Two consecutive dots
+double_dots_short = \u1794\u17b6\u1793\u200b\u1794\u17d2\u179a\u17be\u200b\u1785\u17c6\u178e\u17bb\u1785\u200b\u17ac\u200b\u179f\u1789\u17d2\u1789\u17b6\u200b\u1780\u17d2\u1794\u17c0\u179f\u200b\u1796\u17b8\u179a\u200b\u1787\u17b6\u1794\u17cb\u1782\u17d2\u1793\u17b6
 
 # double_commas_short = Two consecutive comma
 
@@ -113,16 +113,16 @@ gl = \u17a0\u17d2\u1780\u17b6\u179b\u17b8\u179f\u17ca\u17b8
 guiCancelButton = \u1794\u17c4\u17c7\u1794\u1784\u17cb
 
 # guiCheckComplete = LanguageTool check is complete.
-# guiCloseButton=Close
+guiCloseButton=\u1794\u17b7\u1791
 
-# guiConfigWindowTitle = LanguageTool Options
+guiConfigWindowTitle = \u1787\u1798\u17d2\u179a\u17be\u179f LanguageTool
 
 # guiDemoText = This is a example input to to show you how LanguageTool works.
 # guiLanguageManagerDialog=Language Module Manager
 
-# guiMatchCount = Potential errors\:
+guiMatchCount = \u1780\u17c6\u17a0\u17bb\u179f\u200b\u178a\u17c2\u179b\u200b\u1794\u17d2\u179a\u17a0\u17c2\u179b\u200b\u1798\u17b6\u1793\u200b\u17d6
 
-# guiMenuAbout = &About...
+guiMenuAbout = &\u17a2\u17c6\u1796\u17b8\u1799\u17be\u1784...
 
 # guiMenuAddRules = Load &Rule File
 
