--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_nl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_nl.properties
@@ -243,10 +243,10 @@ moreInfo = Meer info\:
 
 pt = Portugees
 
-# pt-BR = Portuguese (Brazil)
+pt-BR = Portugees (Brazili\u00eb)
 
-# pt-PT = Portuguese (Portugal) 
+pt-PT = Portugees (Portugal)
 
-# guiWarning = Warning
+guiWarning = Waarschuwing
 
-# guiDuplicate = Duplicate rule file\!
+guiDuplicate = Bestand met regels is al geladen
