--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_zh.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_zh.properties
@@ -33,11 +33,11 @@ da = \u4e39\u9ea6\u8bed
 
 de = \u5fb7\u8bed
 
-# de-DE = German (Germany)
+de-DE = \u5fb7\u8bed(\u5fb7\u56fd)
 
-# de-AT = German (Austrian)
+de-AT = \u5fb7\u8bed(\u5965\u5730\u5229)
 
-# de-CH = German (Swiss)
+de-CH = \u5fb7\u8bed(\u745e\u58eb)
 
 desc_comma_whitespace = \u5728\u9017\u53f7\u524d\u548c\u62ec\u53f7\u524d/\u540e\u4f7f\u7528\u7a7a\u683c
 
@@ -61,29 +61,29 @@ desc_uppercase_sentence = \u68c0\u67e5\u4e00\u4e2a\u4ee5\u5927\u5199\u5b57\u6bcd
 
 desc_whitespacerepetition = \u7a7a\u683c\u91cd\u590d(\u9519\u8bef\u7684\u683c\u5f0f)
 
-# desc_spelling = Possible spelling mistake
+desc_spelling = \u53ef\u80fd\u7684\u62fc\u5199\u9519\u8bef
 
-# desc_spelling_short = Spelling mistake
+desc_spelling_short = \u62fc\u5199\u9519\u8bef
 
 double_dots_short = \u4e24\u4e2a\u8fde\u7eed\u7684\u53e5\u53f7
 
 double_commas_short = \u4e24\u4e2a\u8fde\u7eed\u7684\u9017\u53f7
 
-# el = Greek
+el = \u5e0c\u814a
 
 en = \u82f1\u8bed
 
-# en-AU = English (Australian)
+en-AU = \u82f1\u8bed(\u6fb3\u5927\u5229\u4e9a)
 
-# en-GB = English (British)
+en-GB = \u82f1\u8bed(\u82f1\u56fd)
 
-# en-US = English (American)
+en-US = \u82f1\u8bed(\u7f8e\u56fd)
 
-# en-CA = English (Canadian)
+en-CA = \u82f1\u8bed(\u52a0\u62ff\u5927)
 
-# en-NZ = English (New Zealand)
+en-NZ = \u82f1\u8bed(\u65b0\u897f\u5170)
 
-# en-ZA = English (South African)
+en-ZA = \u82f1\u8bed(\u5357\u975e)
 
 enterText = \u8bf7\u5728\u9876\u90e8\u533a\u57df\u4e2d\u8f93\u5165\u6216\u7c98\u8d34\u6587\u672c\uff0c\u5e76\u68c0\u67e5
 
@@ -213,7 +213,7 @@ sl = \u65af\u7f57\u6587\u5c3c\u4e9a\u8bed
 
 space_after_comma = \u5728\u9017\u53f7\u4e4b\u540e\u7559\u7a7a\u683c\uff0c\u800c\u4e0d\u662f\u5728\u9017\u53f7\u4e4b\u524d
 
-# spelling = Possible spelling mistake found
+spelling = \u627e\u5230\u7684\u53ef\u80fd\u7684\u62fc\u5199\u9519\u8bef
 
 startChecking = \u5f00\u59cb\u7528{0}\u68c0\u67e5
 
@@ -231,7 +231,7 @@ uk = \u4e4c\u514b\u5170\u8bed
 
 unpaired_brackets = \u4e0d\u6210\u5bf9\u7684\u62ec\u53f7\u6216\u8005\u76f8\u4f3c\u7684\u7b26\u53f7
 
-# useGUIConfig = Use above settings for the server
+useGUIConfig = \u5bf9\u670d\u52a1\u5668\u4f7f\u7528\u4ee5\u4e0a\u8bbe\u7f6e
 
 whitespace_repetition = \u53ef\u80fd\u7684\u8f93\u5165\u9519\u8bef\uff1a\u4f60\u91cd\u590d\u4e86\u4e00\u4e2a\u7a7a\u683c
 
@@ -239,14 +239,14 @@ ro = \u7f57\u9a6c\u5c3c\u4e9a\u8bed
 
 zh = \u7b80\u4f53\u4e2d\u6587
 
-# moreInfo = More info\:
+moreInfo = \u66f4\u591a\u4fe1\u606f\:
 
-# pt = Portuguese
+pt = \u8461\u8404\u7259\u8bed
 
-# pt-BR = Portuguese (Brazil)
+pt-BR = \u8461\u8404\u7259\u8bed(\u5df4\u897f)
 
-# pt-PT = Portuguese (Portugal) 
+pt-PT = \u8461\u8404\u7259\u8bed(\u8461\u8404\u7259)
 
-# guiWarning = Warning
+guiWarning = \u8b66\u544a
 
-# guiDuplicate = Duplicate rule file\!
+guiDuplicate = \u91cd\u590d\u89c4\u5219\u6587\u4ef6\!
