--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
@@ -25,7 +25,7 @@ checkDone = Check done, {0} potential problems found
 
 checkText = &Check Text
 
-correctionMessage = Correction:
+correctionMessage = Correction\:
 
 cs = Czech
 
@@ -91,17 +91,17 @@ enterText2 = Please insert text to check here
 
 eo = Esperanto
 
-errorContext = Context:
+errorContext = Context\:
 
-errorMessage = Message:
+errorMessage = Message\:
 
 es = Spanish
 
 false_friend = False friend
 
-false_friend_desc = false friend hint for:
+false_friend_desc = false friend hint for\:
 
-false_friend_hint = Hint: "{0}" ({1}) means {2} ({3}).
+false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
 
 false_friend_suggestion = Did you mean {0}?
 
@@ -120,7 +120,7 @@ guiConfigWindowTitle = LanguageTool Options
 guiDemoText = This is a example input to to show you how LanguageTool works.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount = Potential errors:
+guiMatchCount = Potential errors\:
 
 guiMenuAbout = &About...
 
@@ -142,11 +142,11 @@ guiMenuQuit = &Quit
 
 guiMenuShowMainWindow = Open Main Window
 
-guiMotherTongue = Your mother tongue:
+guiMotherTongue = Your mother tongue\:
 
-guiNoErrorsFound = No errors or warnings found (language: {0})
+guiNoErrorsFound = No errors or warnings found (language\: {0})
 
-guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language: {0})
+guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language\: {0})
 
 guiOKButton = &OK
 
@@ -160,7 +160,7 @@ guiOOoIgnoreButton = Ignore
 
 guiOOoOptionsButton = Options...
 
-guiProgressWindowTitle = LanguageTool: Checking Text...
+guiProgressWindowTitle = LanguageTool\: Checking Text...
 
 guiRemoveButton=Remove
 guiReplaceWindowTitle = Replace text
@@ -197,13 +197,13 @@ no_space_before_dot = Don't put a space before the full stop
 
 pl = Polish
 
-repetition = Possible typo: you repeated a word
+repetition = Possible typo\: you repeated a word
 
 result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
 resultAreaText = Results will appear here
 
-resultTime = <br>Time: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
 ru = Russian
 
@@ -221,7 +221,7 @@ sv = Swedish
 
 tl = Tagalog
 
-textLanguage = Text Language:
+textLanguage = Text Language\:
 
 two_commas = Two consecutive commas
 
@@ -233,20 +233,20 @@ unpaired_brackets = Unpaired bracket or similar symbol
 
 useGUIConfig = Use above settings for the server
 
-whitespace_repetition = Possible typo: you repeated a whitespace
+whitespace_repetition = Possible typo\: you repeated a whitespace
 
 ro = Romanian
 
 zh = Chinese
 
-moreInfo = More info:
+moreInfo = More info\:
 
 pt = Portuguese
 
 pt-BR = Portuguese (Brazil)
 
-pt-PT = Portuguese (Portugal)
+pt-PT = Portuguese (Portugal) 
 
 guiWarning = Warning
 
-guiDuplicate = Duplicate rule file!
+guiDuplicate = Duplicate rule file\!
