--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_tl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_tl.properties
@@ -33,11 +33,11 @@ da = Danish
 
 de = German
 
-# de-DE = German (Germany)
+de-DE = German (Germany)
 
-# de-AT = German (Austrian)
+de-AT = German (Austrian)
 
-# de-CH = German (Swiss)
+de-CH = German (Swiss)
 
 desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
 
@@ -61,29 +61,29 @@ desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
 
 desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
-# desc_spelling = Possible spelling mistake
+desc_spelling = Possible spelling mistake
 
-# desc_spelling_short = Spelling mistake
+desc_spelling_short = Spelling mistake
 
 double_dots_short = Two consecutive dots
 
 double_commas_short = Two consecutive comma
 
-# el = Greek
+el = Greek
 
 en = English
 
-# en-AU = English (Australian)
+en-AU = English (Australian)
 
-# en-GB = English (British)
+en-GB = English (British)
 
-# en-US = English (American)
+en-US = English (American)
 
-# en-CA = English (Canadian)
+en-CA = English (Canadian)
 
-# en-NZ = English (New Zealand)
+en-NZ = English (New Zealand)
 
-# en-ZA = English (South African)
+en-ZA = English (South African)
 
 enterText = Please type or paste text to check in the top area
 
@@ -213,7 +213,7 @@ sl = Slovenian
 
 space_after_comma = Put a space after the comma, but not before the comma
 
-# spelling = Possible spelling mistake found
+spelling = Possible spelling mistake found
 
 startChecking = Starting check in {0}
 
@@ -231,7 +231,7 @@ uk = Ukrainian
 
 unpaired_brackets = Unpaired bracket or similar symbol
 
-# useGUIConfig = Use above settings for the server
+useGUIConfig = Use above settings for the server
 
 whitespace_repetition = Possible typo\: you repeated a whitespace
 
@@ -239,14 +239,14 @@ ro = Romanian
 
 zh = Chinese
 
-# moreInfo = More info\:
+moreInfo = More info\:
 
-# pt = Portuguese
+pt = Portuguese
 
-# pt-BR = Portuguese (Brazil)
+pt-BR = Portuguese (Brazil)
 
-# pt-PT = Portuguese (Portugal) 
+pt-PT = Portuguese (Portugal) 
 
-# guiWarning = Warning
+guiWarning = Warning
 
-# guiDuplicate = Duplicate rule file\!
+guiDuplicate = Duplicate rule file\!
