--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
@@ -117,7 +117,7 @@ guiCloseButton=Schlie\u00dfen
 
 guiConfigWindowTitle = LanguageTool Optionen
 
-guiDemoText = Dies ist ein Beispiel-Text, um zu zu zeigen, wie LanguageTool funktioniert. Wie man sieht, ist keine R\u00e4chtshreibpr\u00fcfung enthalten.
+guiDemoText = Dies ist ein Beispiel-Text, um zu zu zeigen, wie LanguageTool funktioniert. Wie man sieht, ist auch eine R\u00e4chtshreibpr\u00fcfung enthalten.
 guiLanguageManagerDialog=Language Module Manager
 
 guiMatchCount = M\u00f6gliche Fehler\:
