--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,7 +2,8 @@ LanguageTool Change Log
 
 1.9-dev (release planned for 2012-09-30)
 
- -...
+ -Japanese:
+  -initial support (Takahiro Shinkai, Maxim Mozgovoy's student) 
 
 
 1.8 (2012-06-30)
