document lucene-gosen.jar license

--- a/trunk/JLanguageTool/libs/README
+++ b/trunk/JLanguageTool/libs/README
@@ -11,9 +11,10 @@ commons-validator.jar: Apache License 2.0, http://commons.apache.org/validator/
 ictclas4j-1.0.jar: ictclas4j-license.txt, Apache License 2.0, http://code.google.com/p/ictclas4j/
 junit.jar: Common Public License - v 1.0, CPL.txt, http://www.junit.org
 jWordSplitter.jar: Apache License 2.0, http://www.danielnaber.de/jwordsplitter/
-lucene-*.jar: Apache License 2.0, http://lucene.apache.org
+lucene-core|queries|test-framework.jar: Apache License 2.0, http://lucene.apache.org
+lucene-gosen-1.2.1-ipadic.jar: LGPL v3, http://code.google.com/p/lucene-gosen/
 morfologik-*.jar: Morfologik-license.txt, http://morfologik.blogspot.com, http://www.cs.put.poznan.pl/dweiss
-segment-1.3.0.jar: segment-license.txt, http://sourceforge.net/projects/segment/
+segment-1.3.8.jar: segment-license.txt, http://sourceforge.net/projects/segment/
 tika-core-0.9.jar: Apache License 2.0, http://tika.apache.org
 xml-text-editor-0.0.3.jar: Apache License 2.0, http://code.google.com/p/xml-text-editor/
 jna.jar: LGPL version 2.1 or later, https://github.com/twall/jna
