--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -5,6 +5,9 @@ LanguageTool Change Log
  -Japanese:
   -initial support (Takahiro Shinkai, Maxim Mozgovoy's student) 
 
+ -Russian:
+  -small rules updates
+
 
 1.8 (2012-06-30)
 
