some refactoring to support easier rule enabling/disabling in the future

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
@@ -21,7 +21,7 @@ category_misc = Miscellaneous
 
 category_typo = Possible Typo
 
-checkDone = Check done, {0} potential problems found
+checkDone = Check done, {0} potential problems found ({1}ms)
 
 checkText = &Check Text
 
@@ -203,7 +203,7 @@ result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
 resultAreaText = Results will appear here
 
-resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Time\: {0}ms<br>
 
 ru = Russian
 
