document the change

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -8,6 +8,8 @@ LanguageTool Change Log
  -Russian:
   -small rules updates
 
+ -The internal spelling engine can now additionally tokenize words if the source 
+  dictionary did not include compound versions (for example, hyphenated words).
 
 1.8 (2012-06-30)
 
