Updated CHANGES.txt for Breton, Esperanto, French.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -8,8 +8,17 @@ LanguageTool Change Log
  -Russian:
   -small rules updates
 
- -The internal spelling engine can now additionally tokenize words if the source 
-  dictionary did not include compound versions (for example, hyphenated words).
+ -Breton:
+   -several new rules and fixed false alarms
+   -the internal spelling engine can now additionally tokenize words if the
+    source dictionary did not include compound versions (for example,
+    hyphenated words).
+
+ -Esperanto:
+   -several new rules and fixed false alarms
+
+ -French:
+   -several new rules and fixed false alarms
 
 1.8 (2012-06-30)
 
