stand-alone GUI: Rules can now be disabled and enabled again with a single click. Code is not as clean as I would like though...

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -20,6 +20,10 @@ LanguageTool Change Log
  -French:
    -several new rules and fixed false alarms
 
+
+ -stand-alone GUI: rules can now be disabled and enabled again with a single click
+
+
 1.8 (2012-06-30)
 
  -Greek:
