--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
@@ -21,7 +21,7 @@ category_misc = Miscellaneous
 
 category_typo = Possible Typo
 
-checkDone = Check done, {0} potential problems found ({1}ms)
+checkDone = Potential problems found: {0} (time: {1}ms)
 
 checkText = &Check Text
 
@@ -38,6 +38,12 @@ de-DE = German (Germany)
 de-AT = German (Austrian)
 
 de-CH = German (Swiss)
+
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>Deactivated rules - click to activate again:
 
 desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
 
