[en] fix sf bug #3543914

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -19,6 +19,9 @@ LanguageTool Change Log
 
  -French:
    -several new rules and fixed false alarms
+   
+ -English:
+   -fixed false alarm (sf bug #3543914)
 
 
  -stand-alone GUI: rules can now be disabled and enabled again with a single click
