[eo] several updates to list of transitive/nontransitive Esperanto verbs.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -16,6 +16,7 @@ LanguageTool Change Log
 
  -Esperanto:
    -several new rules and fixed false alarms
+   -updated list of transitive/nontransitive verbs
 
  -French:
    -several new rules and fixed false alarms
