HTTP API: "+" was incorrectly removed from input (sf bug #3543914), patch by Sourceforge user hiddenspirit

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -29,6 +29,9 @@ LanguageTool Change Log
 
  -stand-alone GUI: rules can now be disabled and enabled again with a single click
 
+ -HTTP API: "+" was incorrectly removed from input (sf bug #3543914), patch by
+  Sourceforge user hiddenspirit
+
 
 1.8 (2012-06-30)
 
