[de] document simple verb/subject agreement checker

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -3,10 +3,10 @@ LanguageTool Change Log
 1.9-dev (release planned for 2012-09-30)
 
  -Japanese:
-  -initial support (Takahiro Shinkai, Maxim Mozgovoy's student)
+   -initial support (Takahiro Shinkai, Maxim Mozgovoy's student)
 
  -Russian:
-  -small rules updates
+   -small rules updates
 
  -Breton:
    -several new rules and fixed false alarms
@@ -20,11 +20,14 @@ LanguageTool Change Log
 
  -French:
    -several new rules and fixed false alarms
-   -Opening guillemet (U+00AB) followed by thin no-break
+   -opening guillemet (U+00AB) followed by thin no-break
     space (U+202F) wrongly detected as error (sf bug #3545050)
 
  -English:
    -fixed false alarm (sf bug #3543914)
+
+ -German:
+   -added simple verb/subject agreement checker
 
 
  -stand-alone GUI: rules can now be disabled and enabled again with a single click
