[de] fixed some false alarms by upgrading to the 2012-07-20 snapshot of jwordsplitter (sf bug #3475553)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -28,6 +28,8 @@ LanguageTool Change Log
 
  -German:
    -added simple verb/subject agreement checker
+   -fixed some false alarms by upgrading to the 2012-07-20 snapshot of jwordsplitter
+    (sf bug #3475553)
 
 
  -stand-alone GUI: rules can now be disabled and enabled again with a single click
