[pt] rule updates by Marco A.G.Pinto

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -31,6 +31,9 @@ LanguageTool Change Log
    -fixed some false alarms by upgrading to the 2012-07-20 snapshot of jwordsplitter
     (sf bug #3475553)
 
+ -Portuguese:
+   -several rule updates (Marco A.G.Pinto)
+
 
  -stand-alone GUI: rules can now be disabled and enabled again with a single click
 
